@@ -1,3 +1,11 @@
+2016-05-28  SilverNexus
+	* search.c: Extract the needle length checks from the case-insensitive search
+	  function and put them outside the function. Use recent macros to ease
+	  implementation.
+	* fileperuser_search.c: Split fileperuser_memcasemem() into fileperuser_memcasemem_boyer(),
+	  fileperuser_memcasemem_brute(), and fileperuser_memcasemem_single().
+	* fileperuser_search.h: Add function prototypes for new split search functions.
+
 2016-05-26  SilverNexus
 	* search.c: Define start_line and end_line as const char * in multi-search.
 	  Fix a condition structure bug when HAVE_MMAP is not defined.
